if(NDEBUG)
    set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/target/debug/)
else()
    set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/target/release)
endif()



set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)




add_subdirectory(vulkan_try)


